Add button event listener

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Rock Paper Scissors</h1>
+    <button type="button" id="btn-rock">Rock</button>
+    <button type="button" id="btn-paper">Paper</button>
+    <button type="button" id="btn-scissors">Scissors</button>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
